refactor folder structure

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
 	<head>
 		<title>Course Reg Assistant</title>
-		<!--<link href="bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
-    <link href="application.css" rel="stylesheet" type="text/css"/>
-    <script src="jquery.min.js"></script>
-    <!--<script src="bootstrap.min.js"></script>-->
-		<script src="data.js"></script>
-		<script src="application.js"></script>
+		<!--<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>-->
+    <link href="css/application.css" rel="stylesheet" type="text/css"/>
+    <script src="js/jquery.min.js"></script>
+    <!--<script src="js/bootstrap.min.js"></script>-->
+		<script src="js/data.js"></script>
+		<script src="js/application.js"></script>
 	</head>
 	<body>
 		<h1>
