add helpers for render tables

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="js/jquery.min.js"></script>
     <!--<script src="js/bootstrap.min.js"></script>-->
 		<script src="js/data.js"></script>
+    <script src="js/render.js"></script>
 		<script src="js/application.js"></script>
 	</head>
 	<body>
@@ -45,6 +46,7 @@
 					<th>Change</th>
 				</tr>
 			</table>
+      <br>
     </session>
     <hr>
     <br>
